---
source: crates/core/tests/snapshot_tests.rs
expression: trace
---
steps:
  - step: 0
    view:
      kind: Dialogue
      speaker: Narrator
      text: Testing branching
    state:
      position: 0
      flags: {}
      vars: {}
      history_len: 0
      visual:
        background: ~
        music: ~
        characters: []
  - step: 1
    view:
      kind: System
      message: "SetVar: 0 = 0"
    state:
      position: 1
      flags: {}
      vars: {}
      history_len: 1
      visual:
        background: ~
        music: ~
        characters: []
  - step: 2
    view:
      kind: System
      message: "SetVar: 0 = 5"
    state:
      position: 2
      flags: {}
      vars: {}
      history_len: 1
      visual:
        background: ~
        music: ~
        characters: []
  - step: 3
    view:
      kind: System
      message: JumpIf
    state:
      position: 3
      flags: {}
      vars:
        0: 5
      history_len: 1
      visual:
        background: ~
        music: ~
        characters: []
  - step: 4
    view:
      kind: Dialogue
      speaker: Narrator
      text: Counter is high
    state:
      position: 6
      flags: {}
      vars:
        0: 5
      history_len: 1
      visual:
        background: ~
        music: ~
        characters: []
  - step: 5
    view:
      kind: System
      message: "SetFlag: 0 = true"
    state:
      position: 7
      flags: {}
      vars:
        0: 5
      history_len: 2
      visual:
        background: ~
        music: ~
        characters: []
  - step: 6
    view:
      kind: System
      message: JumpIf
    state:
      position: 8
      flags:
        0: true
      vars:
        0: 5
      history_len: 2
      visual:
        background: ~
        music: ~
        characters: []
  - step: 7
    view:
      kind: Dialogue
      speaker: Narrator
      text: Victory!
    state:
      position: 10
      flags:
        0: true
      vars:
        0: 5
      history_len: 2
      visual:
        background: ~
        music: ~
        characters: []
